--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "react-dom": "19.2.0"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "next": "^15.5.6",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-animate": "^0.2.10",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
 }
