--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "react-dom": "19.2.0"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.548.0",
     "next": "^15.5.6",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-animate": "^0.2.10",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
