--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.11.0",
     "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "next": "^15.5.6",
     "next-auth": "^5.0.0-beta.29",
+    "next-sanity": "^11.6.3-canary.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "sanity": "^4.11.0",
+    "sanity-plugin-markdown": "^6.0.0",
+    "styled-components": "^6.1.19",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
