--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "styled-components": "^6.1.19",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
