--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "packageManager": "npm@10.9.2",
   "overrides": {
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "next": "$next"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.11.0",
+    "@sentry/nextjs": "^10.22.0",
     "@tailwindcss/typography": "^0.5.19",
     "@uiw/react-md-editor": "^4.0.8",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +38,7 @@
     "sanity": "^4.11.0",
     "sanity-plugin-markdown": "^6.0.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.19",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.3.1",
